<resources>
    <string name="bank_app_name">Bank Application</string>
    <string name="hint_email">Email</string>
    <string name="title_home">Home</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_profile">Profile</string>
    <string name="hint_2fa">2FA Code</string>
    <string name="error_2fa_code">Invalid code</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_password">Password</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_signup_failed">Registration failed. Please try again.</string>
    <string name="error_login_failed">Invalid credentials.</string>
    <string name="signup_success">Account created! Please login.</string>
    <string name="signup_header">Sign Up</string>
    <string name="create_account_text">Create account</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="error_password">Password must contain at least 12 characters. Consisting of at least one number, one special character, one lowercase and one uppercase letter.</string>
    <string name="signup_info">Don\'t have an account yet?</string>
    <string name="hint_city">City</string>
    <string name="hint_street_address">Street address</string>
    <string name="hint_post_code">Post code</string>
    <string name="hint_current_password">Current password</string>
    <string name="save_profile">Save</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="button_logout">Logout</string>
    <string name="title_create_bank_account">Create bank account</string>
    <string name="create_account_button_text">Create account</string>
    <string name="hint_account_name">Account name</string>
    <string name="hint_account_type">Account type</string>
    <string name="deposit_money_button">Deposit money</string>
    <string name="link_new_bank_card">Link new bank card</string>
    <string name="edit_account">Edit Account</string>
    <string name="deposit_button">Deposit</string>
    <string name="hint_amount">Amount</string>
    <string name="title_deposit_money">Deposit Money</string>
    <string name="hint_can_do_payments">Can do payments</string>
    <string name="hint_can_transfer_money">Can transfer money</string>
    <string name="save_account_button">Save Account</string>
    <string name="hint_card_name">Card name</string>
    <string name="save_card_button">Save Card</string>
    <string name="hint_withdrawal_limit">Withdrawal limit</string>
    <string name="hint_pay_limit">Pay limit</string>
</resources>
