<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="36dp">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Your Account"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_name"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/account_balance_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"
            android:text="Balance" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_type">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/can_do_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/hint_can_do_payments" />

        <CheckBox
            android:id="@+id/can_transfer_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/hint_can_transfer_money" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deposit_money_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_money_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/link_bank_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_new_bank_card"
            app:layout_constraintTop_toBottomOf="@+id/add_money_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_account_button" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>